test/types/tuple/ferguson/tuple-blank-to-ref.good
tuple-blank-to-ref.chpl:11: In function 'byblank':
tuple-blank-to-ref.chpl:15: error: unresolved call 'byref((int(64),string))'
tuple-blank-to-ref.chpl:5: note: candidates are: byref(ref arg: (int, string))
